k8s/backoffice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-deployment
  labels:
    app: backoffice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backoffice
  template:
    metadata:
      labels:
        app: backoffice
    spec:
      containers:
        - name: backoffice
          image: okteto.dev/backoffice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backoffice-service
spec:
  selector:
    app: backoffice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
