k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice
  # https://www.okteto.com/docs/cloud/ssl
  annotations:
    dev.okteto.com/generate-host: backoffice
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backoffice:
              service:
                name: backoffice-service
                port:
                  number: 80
